# goit-pyweb-hw-02

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
