[tool.poetry]
name = "assistant-bot"
version = "0.1.0"
description = "Welcome to the assistant bot!"
authors = ["Oleksandr Horbatiuk <oleksandr.v.horbatiuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
